k8s-specifications/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
  labels:
    app: result
spec:
  type: LoadBalancer
  selector:
    app: result
  ports:
    - name: "result-service"
      protocol: TCP
      port: 8081        # External port exposed by the LB
      targetPort: 80    # Container port
