k8s-specifications/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
  labels:
    app: vote
spec:
  type: LoadBalancer
  selector:
    app: vote
  ports:
    - name: "vote-service"
      port: 8080        # Port the LB exposes
      targetPort: 80    # Port the container listens on
      protocol: TCP
